PFM-350 Fixed bugs
Fixed page elements being hidden by nav bar stickiness.
Fixed page jumping when main content is small.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,7 +11,7 @@ $light-grey:    #eae9e9;
   position: fixed;
   top: 0;
   height: 100%;
-  width: 100%;
+  width: 74px;
 }
 
 .main_content{
